added instructions and ingredients with their proper list types, added links to main page and to top of page
these changes were made so the user could make the recipe and
they could better read the website and use it

--- a/recipes/gingerSnapCookies.html
+++ b/recipes/gingerSnapCookies.html
@@ -2,12 +2,75 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" 
+    content="width=device-width, initial-scale=1.0">
     <title>Ginger Snap Cookies Recipe</title>
 </head>
 <body>
     <h1>Ginger Snap Cookies</h1>
-    <img src="../images/GingerSnapCookies.jpg"alt="GingerSnapCookies"width="500"height="400">
-
+    <img src="../images/GingerSnapCookies.jpg"
+    alt="GingerSnapCookies"width="500"height="400">
+    <h2>Description</h2>
+    <p>
+        A small, somewhat spicy, very crisp cookie that is 
+        flavored with molasses and ginger. 
+    </p>
+        It is typically served as a finishing 
+        touch to a meal or as an accompaniment for 
+        ice cream and/or sherbet.
+    </p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>Flour, make sure to sift first</li>
+        <li>Spices</li>
+        <ul>
+            <li>Ginger</li>
+            <li>Cinnamon</li>
+            <li>Salt</li>
+        </ul>
+        <li>
+            Shortening is Perfered, 
+            Butter can be subbed 1-1
+        </li>
+        <li>Sugar, white is suggested</li>
+        <li>Egg, it adds moisture</li>
+        <li>
+            Molasses, Dark molasses lends deep, rich, 
+            complex flavor.
+        </li>
+        <li>Cinnamon Sugar, mix of Cinnamon and sugar</li>
+    </ul>
+    <h3>Instructions</h3>
+    <ol>
+        <li>Preheat the oven to 350 degrees F (175 degrees C). 
+            Place cinnamon sugar in a bowl; set aside.
+        </li>
+        <li>Sift flour, ginger, baking soda, cinnamon, 
+            and salt into a mixing bowl. 
+            Stir the mixture until blended, 
+            then sift a second time into another bowl.
+        </li>
+        <li>
+            Beat shortening in a large bowl with an electric mixer until creamy. 
+            Gradually beat in white sugar. 
+            Add egg and molasses and beat until light and fluffy.  
+        </li>
+        <li>
+            Sift 1/3 of the flour mixture into the shortening mixture; stir to thoroughly blend. 
+            Sift in the remaining flour mixture and mix together until a soft dough forms.
+        </li>
+        <li>Pinch off small amounts of dough and roll them with your hands into 1-inch-diameter balls. 
+            Place balls in cinnamon sugar and roll to coat, 
+            then place 2-incShes apart on ungreased baking sheets.
+        </li>
+        <li>
+            Bake in the preheated oven until tops are rounded and slightly cracked, about 10 minutes, switching racks halfway through. 
+            Cool cookies on a wire rack.
+        </li>
+    </ol>
+    
+    <a href="./gingerSnapCookies.html">Go to Top</a>
+    <br><br>
+    <a href="../index.html">Back to Main Page</a>
 </body>
 </html>
