Added link from main page to new recipe page, added description, image, headings and ingredients to recipe page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="recipes/gingerSnapCookies.html">Ginger Snap Cookies</a>
-    
+    <br>
+    <a href="recipes/chocolateChipCookies.html">Chocolate Chip Cookies</a>
 </body>
 </html>
