Finished all parts of Website, Completed Project

--- a/index.html
+++ b/index.html
@@ -6,9 +6,16 @@
     <title>Odin's Recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1>Cookie Monster's Favorite Cookie Recipes</h1>
+    <img src="images/cookie-monster.jpg"alt="Cookie Monster"height="500"
+    width="800">
+    <h3>Some of his favorite recipes</h3>
     <a href="recipes/gingerSnapCookies.html">Ginger Snap Cookies</a>
-    <br>
+    <br><br>
     <a href="recipes/chocolateChipCookies.html">Chocolate Chip Cookies</a>
+    <br><br>
+    <a href="recipes/oatmealRaisinCookies.html">Oatmeal Raisin Cookies</a>
+    <br><br><br>
+    <a href="./index.html">Go to Top</a>
 </body>
 </html>
